# video_note_agent

./: .gitignore  README.md  pyproject.toml  setup.py  test_graph.py  test_output.md  test_output.txt
docs/: graph_execution_structure.md
src/: __init__.py
src/config/: __init__.py  agents.py  configuration.py  loader.py  memory.py  oss.py
src/graph/: builder.py  nodes.py  state.py
src/graph/slide_analysis/: utils.py
src/llms/: llm.py
src/llms/providers/: bailian.py  utils.py
src/log/: __init__.py  colorformat.py  trace.py
src/memory/: __init__.py  memory.py
src/memory/providers/: __init__.py  base.py  inmemory_memory.py  postgres_memory.py
src/oss/: oss.py
src/oss/providers/: base.py  minio_oss.py
src/prompts/: note_generator.md  note_quality_checker.md  slide_analyzer.md  template.py
src/test/unit/config/: test_loader.py
src/test/unit/llms/: asr_dashscope.py  llm.py
src/test/unit/memory/: memory.py
src/test/unit/oss/: oss.py
