[project]
name = "video-note-agent"
version = "0.1.0"
description = "An intelligent agent system that automatically generates comprehensive study notes from video lectures and PDF slides using AI-powered analysis"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "colorama>=0.4.6",
    "dashscope>=1.25.4",
    "jinja2>=3.1.6",
    "langchain>=1.2.0",
    "langchain-openai>=1.1.4",
    "langgraph>=1.0.5",
    "langgraph-checkpoint-postgres>=3.0.2",
    "minio>=7.2.20",
    "pdf2image>=1.17.0",
    "psycopg[binary,pool]>=3.3.2",
    "python-dotenv>=1.0.1",
]
